2011-08-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* nios2-iic-low-level.S: New file.
	* cpu_asm.S: Moved low-level interrupt handling into new file.
	* Makefile.am: Reflect change from above.

2011-08-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* cpu_asm.S, rtems/score/cpu.h: There is no need to save the global
	pointer (gp) in the thread register context since it is a system wide
	constant and set-up with the C runtime environment.

2011-07-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu.c: Remove /*PAGE markers which were interpreted by a long dead
	print script.

2011-05-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Reformat.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* irq.c:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2010-10-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/cpu.h: Add RTEMS_COMPILER_NO_RETURN_ATTRIBUTE to
	_CPU_Context_restore() because it does not return. Telling GCC this
	avoids generation of dead code.

2010-07-30	Gedare Bloom <giddyup44@yahoo.com>

	PR 1599/cpukit
	* irq.c: Rename _Context_Switch_necessary to _Thread_Dispatch_necessary
	to more properly reflect the intent.

2010-07-29	Gedare Bloom <giddyup44@yahoo.com>

	PR 1635/cpukit
	* rtems/score/cpu.h, rtems/score/types.h: Refactoring of priority
	handling, to isolate the bitmap implementation of priorities in the
	supercore so that priority management is a little more modular. This
	change is in anticipation of scheduler implementations that can
	select how they manage tracking priority levels / finding the highest
	priority ready task. Note that most of the changes here are simple
	renaming, to clarify the use of the bitmap-based priority management.

2010-07-16	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/cpu.h: Include <rtems/score/types.h> first.
	* rtems/score/types.h: Use <rtems/score/basedefs.h> header file.

2010-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>